chore: adds docs, fix mobile field overflow

--- a/packages/ui/src/elements/BulkUpload/FileSidebar/index.scss
+++ b/packages/ui/src/elements/BulkUpload/FileSidebar/index.scss
@@ -197,13 +197,31 @@
     overflow: auto;
   }
 
+  &__mobileBlur {
+    @include blur-bg;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 100ms cubic-bezier(0, 0.2, 0.2, 1);
+
+  }
+  
+  &__showingFiles {
+    .file-selections__mobileBlur {
+      opacity: 1;
+    }
+  }
+
   @include mid-break {
     --file-gutter-h: var(--gutter-h);
     flex-direction: column-reverse;
     width: 100%;
-    position: absolute;
+    position: sticky;
     bottom: 0;
-    top: 0;
+    flex-shrink: 0;
 
     &__showingFiles {
       z-index: 2;
@@ -215,6 +233,10 @@
     
     &__fileRowContainer {
       z-index: 1;
+    }
+
+    &__header {
+      margin-top: 0;
     }
     
     &__headerTopRow {
